# UEFI-Game

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  OSProject.dec  OSProject.dsc  README.md
Application/BootManager/: BootManager.c  BootManager.inf  Makefile  data.txt  gpt_fs.h
Application/BootManager2D/: BootManager2D.inf  Makefile
Application/BootManager2D/include/: Common.h  Config.h  DemoGame.h
Application/BootManager2D/src/: Config.c  DemoGame.c  FileSystems.c  Graphics.c  Main.c
Application/BootManager3D/: BootManager3D.inf  Makefile
Application/BootManager3D/include/: BMPReader.h  Config.h  DemoGame.h  FileSystems.h  Graphics.h
Application/BootManager3D/src/: BMPReader.c  Common.c  Config.c  DemoGame.c  Main.c
Application/Maze/: Makefile  Maze.c  Maze.inf
Application/Wordle/: Makefile  Wordle.c  Wordle.inf
Application/XV6/: Makefile  XV6.inf  elf.h  xv6.c  xv6.h
Application/XV6/data/: Makefile  README  cp.c  hello.c  mp.c  mv.c  sh.c
resources/: 2DConfig.txt  3DConfig.txt  MazeConfig.conf  Sprite.txt  TexturesConfig.conf  labyrinth.txt  words.txt
